# clash-kite

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PLAN.md  PRD.md  README.md  README_EN.md  SPEC.md  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
.claude-memory/: MEMORY.md  user.md
docs/: DEVELOPMENT.md  README.md  USAGE.md  USAGE_EN.md  api-reference.md  architecture.md  connections-module.md  dns-module.md  kernel-module.md  logs-module.md  profile-module.md  proxy-module.md  resources-module.md  rules-module.md  settings-module.md  sniffer-module.md  sysproxy-module.md  tun-module.md
scripts/: prepare.mjs
src/: App.tsx  globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: README.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  connections.rs  kernel.rs  mod.rs  node.rs  profile.rs  proxy.rs  settings.rs  window.rs
src-tauri/src/core/: mihomo.rs  mihomo_api.rs  mod.rs  scheduler.rs  sysproxy.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: config.rs  connections.rs  kernel.rs  mod.rs  node.rs  profile.rs  proxy.rs  settings.rs
src-tauri/src/services/: config.rs  kernel.rs  mod.rs  node.rs  profile.rs  proxy.rs  settings.rs
src-tauri/src/utils/: file.rs  network.rs
src/api/: index.ts
src/components/: Layout.tsx
src/locales/: en.json  zh.json
src/pages/: Connections.tsx  Dashboard.tsx  Logs.tsx  Nodes.tsx  Profiles.tsx  Settings.tsx
src/store/: config.ts  connections.ts  index.ts  kernel.ts  node.ts  proxy.ts  (+1 more)
(+3 files in other folders)
